--- a/UF1/s2m8uf104_facebook/facebook_w.css
+++ b/UF1/s2m8uf104_facebook/facebook_w.css
@@ -529,10 +529,6 @@ background-color: #A5A5A5;
   visibility: hidden;
   }
 
-  #contingut{
-
-  }
-
   #cap{
     height: 254px;
     background-image: url(img/fondo.jpg);
@@ -562,62 +558,26 @@ background-color: #A5A5A5;
   }
 
   #menu{
-visibility: hidden;
+    visibility: hidden;
   }
 
-  #menu li{
-
-  }
-
-  #menu li:hover{
-
-  }
-  .esquerra{
-
-  }
 
   #principal{
   margin-top:150px;
-  }
-
-  #secciones{
-
-  }
-
-  #seccion2{
-
+  padding: 12px;
   }
 
   .dreta{
-
+    width: 100%;
+    float: none;
+    clear: none;
+    padding: 12px;
+    margin-bottom: 30px;
+    box-shadow: 5px 5px 5px grey;
   }
 
-  .esquerra, .dreta{
-
-  }
-
-  ul{
-
-  }
-
-  #secciones h2{
-
-  }
-
-  #presentacion h2{
-
-  }
-
-  #presentacion p{
-
-  }
-
-  #amistad h2{
-
-  }
-
-  #sabias h2{
-
+  #presentacion {
+    box-shadow: 5px 5px 5px grey;
   }
 
 
@@ -657,6 +617,7 @@ visibility: hidden;
   }
 
 
+
   #secciones li{
    width: 60%;
    list-style: none;
@@ -665,230 +626,240 @@ visibility: hidden;
    color: grey;
     }
 
-   #amistad li a:link{
+   #amistad, #fotos{
+     display: none;
+   }
+
+
+   #pensando{
+     height: 169px;
+     padding: 0;
 
    }
 
-   #amistad a:visited{
-
-
+    #uno{
+     box-shadow: 0 1px 0 #DDD;
+     height: 20px;
+     background-color: #E5E5E5;
+     margin: 0;
+     padding: 0px;
    }
 
-  #ag{
-
-    background-image: url(https://agarcia2019crn.github.io/M08/s2m8uf104_garciaa/img/perfil.jpg);
-  }
-  #mm{
-    background-image: url(https://mmunozp2019crn.github.io/M08/s2m8uf104_munoz/img/logo.jpg);
-  }
-  #sg{
-    background-image: url(https://sgarzon2019crn.github.io/M08/s2m8uf104_facebook/img/perfil.jpg);
-  }
-  #np{
-    background-image: url(https://iprados2019crn.github.io/M08/s2m8uf104_iprados/img/fotoperfil.jpg);
-  }
-  #op{
-    background-image: url(https://oparicio2019crn.github.io/M08/UF1/s2m8uf104_oparicio/img/perfil.png);
-  }
-  #nc{
-    background-image: url(https://nchia2019crn.github.io/M08/s2m8uf104_chia/img/perfil.jpg);
-  }
-  #vh{
-    background-image: url(https://vherrero2019crn.github.io/M08/s2m8uf104facebook/img/perfil.png);
-  }
-  #gb{
-    background-image: url(https://gbonsoms2019crn.github.io/M08/s2m8uf104_facebook/img/pajaro.jpg);
-  }
-  #sm{
-    background-image: url(https://smarcer2019crn.github.io/M08/s2m8uf104_marcer/img/perfil_yo.jpg);
-  }
-
-  #fotos ul{
-
-  }
-  #fotos li{
-
-  }
-
-
-  #foto1{
-    background-image: url(img/fantasma.jpg);
-    background-position: -15px;
-  }
-
-  #foto2{
-    background-image: url(img/fantasma.jpg);
-    background-position: -15px;
-  }
-  #foto3{
-    background-image: url(img/fantasma.jpg);
-    background-position: -15px;
-  }
-  #foto4{
-    background-image: url(img/fantasma.jpg);
-    background-position: -15px;
-  }
-  #foto5{
-    background-image: url(img/fantasma.jpg);
-    background-position: -15px;
-  }
-  #foto6{
-    background-image: url(img/fantasma.jpg);
-    background-position: -15px;
-  }
-  #foto7{
-    background-image: url(img/fantasma.jpg);
-    background-position: -15px;
-  }
-  #foto8{
-    background-image: url(img/fantasma.jpg);
-    background-position: -15px;
-  }
-  #foto9{
-    background-image: url(img/fantasma.jpg);
-    background-position: -15px;
-  }
-  #amistad ul{
-
-  }
-
-
-  #pensando{
-
-  }
+   #uno li{
+     display: block;
+     font-size: 14px;
+     padding: 9px -1px;;
+     margin: 0px 5px 0 0px;
+     float: left;
+     border-left: 2px solid #fff;
+     height: 20px;
+   }
 
    #uno{
+     padding: 0px;
+     margin: 0px;
+     width: 100%;
+   }
 
-  }
+   #crear{
+     background-image: url(iconetes/lapiz.png);
+     text-indent: 30px;
+     background-repeat: no-repeat;
+     background-position: 10px;
+     background-size: 15px;
+   }
 
-  #uno li{
+   #foto{
+     background-image: url(iconetes/camara.png);
+     text-indent: 30px;
+     background-repeat: no-repeat;
+     background-position: 10px;
+     background-size: 15px;
+   }
+   #video{
+     background-image: url(iconetes/camara.png);
+     text-indent: 30px;
+     background-repeat: no-repeat;
+     background-position: 10px;
+     background-size: 15px;
+   }
+   #acontecimiento{
+     background-image: url(iconetes/publicacion.png);
+     text-indent: 30px;
+     background-repeat: no-repeat;
+     background-position: 10px;
+     background-size: 15px;
+     background-color: #E5E5E5;
+     float: right;
+   }
+   .pregunta{
+     width: 100%;
+     height: 60px;
+     position: relative;
+     top: 2px;
+   }
 
-  }
+   #dos{
+    height: 48px;
+    position: relative;
+    margin: 0;
+    padding: 10px 15px 0 50px;
+    position: relative;
+    top: 2px;
+   }
 
-  #uno{
-
-  }
-
-  #crear{
-
-  }
-
-  #foto{
-
-  }
-
-  #video{
-    background-image: url(iconetes/camara.png);
-    text-indent: 30px;
-    background-repeat: no-repeat;
-    background-position: 10px;
-    background-size: 15px;
-  }
-  #acontecimiento{
-    background-image: url(iconetes/publicacion.png);
-    text-indent: 30px;
-    background-repeat: no-repeat;
-    background-position: 10px;
-    background-size: 15px;
+   #dos li{
+    display: inline-block;
+    font-size: 14px;
+    padding: 7px;
+    margin: 0px;
+    border-radius: 20px;
     background-color: #E5E5E5;
-    width:490px;
-  }
-  .pregunta{
+   }
 
-  }
+   #miniperfil img{
+     width: 30px;
+     height: 30px;
+     margin-top: 40px;
+     left: 30px;
+     position: absolute;
+     z-index: 6000;
+   }
 
-  #dos{
+   #dos li:hover{
+   background-color: #A5A5A5;
+   }
 
-  }
+   #uno li:hover{
+   background-color: #A5A5A5;
+   }
 
-  #dos li{
+   .pregunta{
+     padding-left: 50px;
+   }
+   #fotoyvideo{
+   text-indent: 24px;
+   background-image: url(iconetes/paisaje.png);
+   background-repeat: no-repeat;
+   background-position: 4px 3px;
+   }
 
-  }
+   #etiquetar{
+     text-indent: 24px;
+     background-image: url(iconetes/usuario.png);
+     background-repeat: no-repeat;
+     background-position: 4px 3px;
+   }
 
-  #miniperfil img{
+   #sentimiento{
+     text-indent: 24px;
+     background-image: url(iconetes/carita.png);
+     background-repeat: no-repeat;
+     background-position: 4px 3px;
+   }
 
-  }
-
-  #dos li:hover{
-
-  }
-
-  #uno li:hover{
-
-  }
-
-  .pregunta{
-
-  }
-  #fotoyvideo{
-
-  }
-
-  #etiquetar{
-
-  }
-
-  #sentimiento{
-
-  }
+   #puntos{
+    list-style-type: none;
+   }
 
 
-  #comentarios img{
+   #comentarios #oriol{
+   float: left;
+   width: 30px;
+   height: 30px;
+   left: 5px;
+   margin-top: 15px;
+   }
 
-  }
-
-  #texto{
-
-  }
-
-  #diamesany{
-
-  }
-
-  #comentarios h6{
-
-  }
-
-  #comentarios ul{
-
-  }
-
-  #comentarios ul li{
-
+  #comentarios #yaiza{
+    float: left;
+    width: 30px;
+    height: 30px;
+    left: 5px;
+    margin: 0px;
   }
 
-  #comentarios #texto{
+   #texto{
+     float: left;
+     text-indent: 15px;
+   }
 
-  }
-  #comentarios p{
+   #diamesany{
+   color:grey;
+   float: right;
+   margin-right: 30px;
+   }
 
-  }
+   #comentarios h6{
+     text-indent: 20px;
+     background-image: url(iconetes/like.png);
+     background-repeat: no-repeat;
+     height: 16px;
+     background-position: 0px -4px;
+     border-bottom: 1px solid grey;
+   }
 
-  #mg{
+   #comentarios ul{
+     height: 40px;
+     width: 100%;
+     overflow: hidden;
+     padding: 0 50px;
+     border-bottom: 1px solid grey;
+   }
 
-  }
+   #comentarios ul li{
+     display: list-item;
+     float:left;
+     background-repeat: no-repeat;
+     margin-left: 30px;
+     font-size:15px;
+     font-weight: bold;
+   }
 
-  #com{
+   #comentarios #texto{
+     color:blue;
+   }
+   #comentarios p{
+   clear: both;
+   }
 
-  }
+   #mg{
+     list-style-image:url(iconetes/mg.png);
+   }
 
-  #comp{
+   #com{
+     list-style-image:url(iconetes/comentario.png);
+   }
 
-  }
+   #comp{
+     list-style-image:url(iconetes/flecha.png);
+   }
 
-  #puntos{
+   #puntos{
+   list-style-image:none);
+   }
 
-  }
+   #comentarios ul li:hover{
+   background-color: #A5A5A5;
+   }
 
-  #comentarios ul li:hover{
+   .textocomentario{
+     display:block;
+     background-color: #e9ebed;
+     margin-top: 17px;
+     border: solid grey 1px;
+     border-radius: 24px;
+     line-height: 1.3em;
+     width: 79%;
+     padding: 8px;
+     margin-left: 50px;
+   }
 
-  }
-
-  .textocomentario{
-
-  }
-
-  #comentarios #meme{
-
-  }
+   #comentarios #meme{
+     width: 190px;
+     height: 310px;
+     border-radius: 0;
+     padding: 10px;
+     margin: -20px 20px 20px;
+   }
 }
